<resources>
    <string name="app_name">Focus Aware</string>
    <string name="appLabel">Focus Aware</string>
    <string name="uuid_for_worker">5955b0b4-748b-47d4-9797-bceef057dadf</string>
    <string name="default_interval_value">15</string>
    <string name="reminder_interval">Reminder Interval</string>
    <string name="update_reminder_interval">UPDATE REMINDER INTERVAL</string>
    <string name="stop_alarm">STOP ALARM</string>
    <string name="check_autostart">check Autostart</string>
    <string name="start_focus_aware">Start Focus Aware</string>
    <string name="specific_or_personalized_reminder_for_focus">Specific or personalized reminder for focus</string>
</resources>